--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -27,39 +27,39 @@
       <RowConstraints vgrow="ALWAYS" />
    </rowConstraints>
    <children>
-      <Button fx:id="btn1" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj1" text="1" GridPane.columnIndex="0" GridPane.rowIndex="4">
+      <Button fx:id="btn1" maxWidth="Infinity"  onAction="#btnBroj1" text="1" GridPane.columnIndex="0" GridPane.rowIndex="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button fx:id="btn2" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj2" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <Button fx:id="btn2" maxWidth="Infinity"  onAction="#btnBroj2" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button fx:id="btn3" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj3" prefHeight="0.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4">
+      <Button fx:id="btn3" maxWidth="Infinity"  onAction="#btnBroj3" prefHeight="0.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button fx:id="btn4" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj4" text="4" GridPane.columnIndex="0" GridPane.rowIndex="3">
+      <Button fx:id="btn4" maxWidth="Infinity"  onAction="#btnBroj4" text="4" GridPane.columnIndex="0" GridPane.rowIndex="3">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button fx:id="btn7" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj7" text="7" GridPane.columnIndex="0" GridPane.rowIndex="2">
+      <Button fx:id="btn7" maxWidth="Infinity"  onAction="#btnBroj7" text="7" GridPane.columnIndex="0" GridPane.rowIndex="2">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button fx:id="btn8" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj8" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <Button fx:id="btn8" maxWidth="Infinity"  onAction="#btnBroj8" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button fx:id="btn5" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj5" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <Button fx:id="btn5" maxWidth="Infinity"  onAction="#btnBroj5" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button fx:id="btn9" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj9" prefHeight="27.0" prefWidth="0.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <Button fx:id="btn9" maxWidth="Infinity"  onAction="#btnBroj9" prefHeight="27.0" prefWidth="0.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button fx:id="btn6" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj6" prefHeight="27.0" prefWidth="37.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <Button fx:id="btn6" maxWidth="Infinity"  onAction="#btnBroj6" prefHeight="27.0" prefWidth="37.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
@@ -91,11 +91,11 @@
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button fx:id="equalsBtn" maxHeight="Infinity" maxWidth="Infinity" onAction="#btnJednako" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2">
+      <Button fx:id="equalsBtn" styleClass="jednakoStill" maxHeight="Infinity" maxWidth="Infinity" onAction="#btnJednako" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Label fx:id="display" maxHeight="Infinity" maxWidth="Infinity" styleClass="labelStil" text ="${controller.broj1}" GridPane.columnIndex="0" GridPane.columnSpan="4">
+      <Label fx:id="display" maxHeight="Infinity" maxWidth="Infinity" styleClass="labelStil" text ="${controller.number1}" GridPane.columnIndex="0" GridPane.columnSpan="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Label>
